src/objects/CRM_data__c.object
<CustomObject>
    <fields>
        <fullName>Business_area__c</fullName>
        <label>Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_region__c</fullName>
        <label>Lead source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_import_date__c</fullName>
        <label>CRM import date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_import_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CRM import id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_logfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM logfile</label>
        <referenceTo>CRM_logfile__c</referenceTo>
        <relationshipLabel>CRM data</relationshipLabel>
        <relationshipName>CRM_data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Deals__c</fullName>
        <label>No Wins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Leads__c</fullName>
        <label>No Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Opportunities__c</fullName>
        <label>No Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Deals__c</fullName>
        <label>Amount Wins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Opportunities__c</fullName>
        <label>Amount Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_w_Opportunities__c</fullName>
        <label>Amount (weighted) Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CRM data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>